# turtlescan

./: Cargo.toml  LICENSE  README.md  log.yml
src/: column.rs  data.rs  entrypoint.rs  header_list.rs  lib.rs  main.rs  pane_block_list.rs  pane_txn_details.rs  pane_txn_list.rs  style.rs  tail_blocks.rs  tui.rs  util.rs  widget_tree.rs
tests/: tui_test.rs
