[package]
name = "turtlescan"
version = "0.6.0"
edition = "2018"
description = "Explore Ethereum from the safety of your shell"
repository = "https://github.com/lithp/turtlescan"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
ethers-core="0.4.6"
ethers-providers = "0.4.6"
ethers-contract = "0.4.6"
serde = "1.0.117"
serde_json = "1.0.66"
futures = "0.3"
tokio = { version = "1.10.0", features = ["full"] }
clap = "2.33.3"
tui = "0.16"
termion = "1.5.6"
log4rs="1.0.0"
log="0.4.14"
term_size="0.3.2"
simple-error="0.1.9"
signal-hook="0.3.10"
chrono="0.4.19"
xdg = "2.2.0"
sled = "0.34.7"
flexbuffers = "2.0.0"
crossbeam = "0.8.1"
hex="0.4.3"
unicode-width = "0.1"
